<resources>
    <string name="app_name">BankingWithInito</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name :</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="amount">Amount :</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_with_atm">Withdraw with ATM</string>
    <string name="deposit">Deposit</string>
    <string name="download_statement">Download Statement</string>
    <string name="transactions">Transactions</string>
    <string name="other_options">Other Options</string>
    <string name="customer_details">Customer Details</string>
    <string name="logout">Logout</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="savings_account">Savings Account</string>
    <string name="current_account">Current Account</string>
    <string name="loan_account">Loan Account</string>
    <string name="customer_s_uid_s">Customer\'s UID\'s</string>
    <string name="amount_to_withdraw">Amount to withdraw :</string>
    <string name="card_number">Card Number :</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV :</string>
    <string name="complete_transaction">Complete Transaction</string>
    <string name="create_a_new_loan_account">Create a new Loan Account</string>
    <string name="emi">EMI :</string>
    <string name="generate_emi">Generate EMI</string>
    <string name="create_new_account">Create New Account</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="balance_rs_10000">Balance : Rs. 10000</string>
    <string name="amount_to_repay">Amount to Repay :</string>
    <string name="complete_repayment">Complete Repayment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="customer_uid">Customer UID :</string>
    <string name="password">Password :</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="search_for_your_location">Search for your location :</string>
    <string name="or">Or</string>
    <string name="use_your_current_location">Use your Current Location</string>
    <string name="done">Done</string>
    <string name="profile">Profile</string>
    <string name="email">Email :</string>
    <string name="go_back">Go Back</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_account_number">Enter Account Number :</string>
    <string name="generate_referral_code">Generate Referral Code</string>
    <string name="username">Username :</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_02_02_1999">02/02/1999</string>
    <string name="generate_uid">Generate UID</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="create_a_new_savings_account">Create a new Savings Account</string>
    <string name="create_account">Create Account</string>
    <string name="admin_login">Admin Login</string>
    <string name="customer_login">Customer Login</string>
    <string name="welcome">Welcome !!</string>
    <string name="passbook">Passbook</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="show_transactions">Show Transactions</string>
    <string name="account_number_123456">Account Number: 123456</string>
    <string name="atm_card_number_1234">ATM Card Number: **** **** **** 1234</string>
    <string name="cvv_123">CVV: 123</string>
    <string name="expiry_date_12_24">Expiry Date: 12/24</string>
    <string name="qwerty">QWERTY</string>
    <string name="accounts">Accounts</string>
    <string name="no_accounts_n_click_the_button_below_to_create_a_new_account">No Accounts \n Click the button below to create a new account</string>
    <string name="user_name">User Name</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="personal_information">Personal Information</string>
    <string name="refer">Refer</string>
    <string name="legal">LEGAL</string>
    <string name="savings">Savings</string>
    <string name="acc_num">Acc Num :</string>
    <string name="balance">Balance</string>
    <string name="date">Date :</string>
    <string name="account_type">Account type :</string>
    <string name="transaction_type">Transaction type :</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="loan_type">
        <item>Home Loan ( Interest 7% )</item>
        <item>Car Loan ( Interest 8% )</item>
        <item>Personal Loan ( Interest 12% )</item>
        <item>Business Loan ( Interest 15% )</item>
    </string-array>
    <string-array name="passbook_print_type">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="time">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

</resources>